# standardese

./: CMakeLists.txt  Dockerfile  README.md  pixi.toml
.github/workflows/: test.yml
test/: synopsis.cpp
test/markup/: phrasing.cpp
tool/: CMakeLists.txt
